--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
     h1 {
       font-size: 2rem;
-      color: #FFD700;
+      color: #8b508d;
       margin: 1rem 0 0.5rem;
     }
 
@@ -32,7 +32,7 @@
     #status {
       font-size: 1.2rem;
       font-weight: bold;
-      color: #4ee44e;
+      color: #d463b2;
       text-align: center;
       margin-top: 1.5rem;
     }
@@ -68,7 +68,7 @@
     }
 
     strong {
-      color: #FFD700;
+      color: #8d5189;
     }
   </style>
 </head>
