--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
   <!-- ✅ PWA設定 -->
   <link rel="manifest" href="/manifest.json" />
-  <link rel="icon" href="/static/icon-192.png" />
+  <link rel="icon" href="/static/isbn192.png" />
   <meta name="theme-color" content="#000000" />
   <script>
     if ("serviceWorker" in navigator) {
